--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc.json",
-  "semi": true
+  "semi": true,
+  "useTabs": false,
+  "tabWidth": 2
 }
